# wisdom

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: error.rs  lib.rs
src/Rest_Api/: demo_Api.rs
src/connectors/: file.rs  mod.rs
src/documents/: mod.rs  pdf.rs
