[package]
name = "wisdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { git = "https://github.com/akhildevelops/candle.git", branch = "mymain", package = "candle-core", features = [
    "mkl",
] }
lopdf = "0.32.0"
thiserror = "1.0.58"
